# surgeist-window

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
api/: public-api.txt
api/generator/: Cargo.toml
api/generator/src/: main.rs
guidance/: surgeist-rust-modeling-guide.md
plans/: 2026-06-24-surgeist-window-modeling-refactor.md  2026-06-24-window-test-follow-up-implementation-plan.md  2026-06-25-window-architecture-follow-up-implementation-plan.md
src/: accessibility.rs  capability.rs  clipboard.rs  command.rs  context.rs  cursor.rs  descriptor.rs  dsl.rs  error.rs  event.rs  geometry.rs  handler.rs  lib.rs  loop_.rs  registry.rs  scheduler.rs  testing.rs  tests.rs  transition.rs  winit_adapter.rs  winit_mapping.rs
