[package]
name = "surgeist-window"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/bj-data-eng/surgeist-window"
readme = "README.md"
description = "Native window boundary for Surgeist."

[lib]
name = "surgeist_window"
path = "src/lib.rs"

[dependencies]
accesskit_winit = { version = "=0.33.0", optional = true }
cursor-icon = "=1.2.0"
keyboard-types = "=0.7.0"
raw-window-handle = "=0.6.2"
winit = "=0.30.13"

[features]
default = []
accessibility = ["dep:accesskit_winit"]
